--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "redux-starter",
   "version": "1.0.0",
-  "description": "Starter kit for Redux web apps",
+  "description": "Starter template for Redux web apps",
   "main": "index.js",
   "scripts": {
     "postinstall": "npm run build",
@@ -15,7 +15,8 @@
     "react",
     "starter"
   ],
-  "author": "Marc Garreau",
+  "author": "Greg Willson",
+  "forked-from": "Marc Garreau",
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.7.4",
